--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,10 @@
 html,body {
-    text-align: center;
     width: 100%;
     height: 100%;
+    max-height: 100%;
+    max-width: 100%;
+    overflow: hidden;
+    text-align: center;
 }
 
 .container_wrapper {
